file(GLOB test_srcs RELATIVE ${CMAKE_SOURCE_DIR}/test *.c)
foreach(test_src ${test_srcs})
    string(REGEX REPLACE "(.*)\\.c$" "\\1" test_exe ${test_src})
    add_executable(${test_exe} ${test_src})
    target_link_libraries(${test_exe} vinbero_common cmocka)
    add_test(NAME ${test_exe} COMMAND ${test_exe} WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
endforeach()
